--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
 	<dimen name="fab_margin">16dp</dimen>
+
+	<dimen name="input_text_size">16sp</dimen>
+	<dimen name="input_text_hint_size">12sp</dimen>
+	<dimen name="input_text_label_size">12sp</dimen>
 </resources>
