- upgrade kotlin - update logger - add LoadingLayout (not finishing) - add rv typed adapter/vh - add DebounceAutoCompleteView - update ToolbarBuilder - add MVP classes for BottomSheetDialog - add/update some extensions - add AppInfoHelper - add Decorator for text and other... - add ProgressBitmapFactory - add FabricLogger who can inject into the AnalysisSystem

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
 
   <!--Colors-->
 
-  <color name="sdk_input">#333333</color>
-  <color name="sdk_input_highlight">#64b246</color>
-  <color name="sdk_input_hint">#A0333333</color>
-  <color name="sdk_input_error">#d5162f</color>
+  <color name="c_input">#333333</color>
+  <color name="c_input_highlight">#64b246</color>
+  <color name="c_input_hint">#A0333333</color>
+  <color name="c_input_error">#d5162f</color>
 </resources>
