--- a/app/src/main/res/layout/w_input.xml
+++ b/app/src/main/res/layout/w_input.xml
@@ -22,7 +22,7 @@
 			android:id="@+id/input"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingBottom="@dimen/sdk_padding"/>
+			android:paddingBottom="@dimen/c_padding"/>
 
 	</LinearLayout>
 
