--- a/app/src/main/res/layout/w_input.xml
+++ b/app/src/main/res/layout/w_input.xml
@@ -5,9 +5,9 @@
 
 	<LinearLayout
 		android:id="@+id/inputContainer"
-		android:background="@drawable/bg_input_widget"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:background="@drawable/bg_input_widget"
 		android:focusable="true"
 		android:focusableInTouchMode="true"
 		android:orientation="vertical">
@@ -18,11 +18,11 @@
 			android:layout_height="wrap_content"
 			android:visibility="invisible" />
 
-		<android.support.v7.widget.AppCompatEditText
+		<androidx.appcompat.widget.AppCompatEditText
 			android:id="@+id/input"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingBottom="@dimen/c_padding"/>
+			android:paddingBottom="@dimen/c_padding" />
 
 	</LinearLayout>
 
