--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 		<!-- Customize your theme here. -->
-		<item name="colorPrimary">@color/colorPrimary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name="colorAccent">@color/colorAccent</item>
+		<item name="colorPrimary">@android:color/white</item>
+		<item name="colorPrimaryDark">@android:color/black</item>
+		<item name="colorAccent">@android:color/holo_green_light</item>
 	</style>
 
 	<style name="AppTheme.NoActionBar">
@@ -16,18 +16,5 @@
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-
-	<style name="TestStyle">
-		<item name="android:inputType">text</item>
-		<item name="highLightColor">@color/c_input_highlight</item>
-		<item name="errorColor">@color/c_input_error</item>
-		<item name="inputTextSize">@dimen/input_text_size</item>
-		<item name="inputTextColor">@color/c_input</item>
-		<item name="hintTextSize">@dimen/input_text_hint_size</item>
-		<item name="hintTextColor">@color/c_input_highlight</item>
-		<item name="labelTextSize">@dimen/input_text_label_size</item>
-		<item name="labelTextColor">@color/c_input_hint</item>
-	</style>
 
 </resources>
